<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~  * Copyright (C) 2025 Shemmy
  ~  *
  ~  * This program is free software: you can redistribute it and/or modify
  ~  * it under the terms of the GNU General Public License as published by
  ~  * the Free Software Foundation, version 3 of the License.
  ~  *
  ~  * This program is distributed in the hope that it will be useful,
  ~  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  * GNU General Public License for more details.
  ~  *
  ~  * You should have received a copy of the GNU General Public License
  ~  * along with this program.  If not, see <https://www.gnu.org/licenses/>.
  ~  */
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:icon="@drawable/outline_code_24"
        android:key="github"
        android:layout="@layout/item_preference"
        android:summary="@string/summary_source_code"
        android:title="@string/preference_source_code" />

    <Preference
        android:icon="@drawable/outline_new_releases_24"
        android:key="latest"
        android:layout="@layout/item_preference"
        android:summary="@string/summary_latest_release"
        android:title="@string/preference_latest_release" />

    <Preference
        android:icon="@drawable/outline_telegram_24"
        android:key="telegram"
        android:layout="@layout/item_preference"
        android:summary="@string/summary_telegram_channel"
        android:title="@string/preference_telegram_channel" />

    <Preference
        android:icon="@drawable/outline_copyright_24"
        android:key="licenses"
        android:layout="@layout/item_preference"
        android:summary="@string/summary_licenses"
        android:title="@string/preference_licenses" />


    <Preference
        android:icon="@drawable/outline_info_24"
        android:key="version"
        android:layout="@layout/item_preference"
        android:summary="1.0.1 Amanatsu-Beta"
        android:title="@string/preference_version" />

</PreferenceScreen>