<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ /*
  ~  * Copyright (C) 2025 Shemmy
  ~  *
  ~  * This program is free software: you can redistribute it and/or modify
  ~  * it under the terms of the GNU General Public License as published by
  ~  * the Free Software Foundation, version 3 of the License.
  ~  *
  ~  * This program is distributed in the hope that it will be useful,
  ~  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  * GNU General Public License for more details.
  ~  *
  ~  * You should have received a copy of the GNU General Public License
  ~  * along with this program.  If not, see <https://www.gnu.org/licenses/>.
  ~  */
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        android:icon="@drawable/outline_tag_24"
        android:key="currency"
        android:layout="@layout/item_preference"
        android:summary="Zambian Kwachwa"
        android:title="@string/preference_currency" />

    <Preference
        android:icon="@drawable/outline_straighten_24"
        android:key="decimals"
        android:layout="@layout/item_preference"
        android:summary="@string/summary_decimal_points"
        android:title="@string/preference_decimal_points"
        app:isPreferenceVisible="false" />

</PreferenceScreen>
