<?xml version="1.0" encoding="utf-8"?><!--
    * Copyright (C) 2025 Shemmy
    *
    * This program is free software: you can redistribute it and/or modify
    * it under the terms of the GNU General Public License as published by
    * the Free Software Foundation, version 3 of the License.
    *
    * This program is distributed in the hope that it will be useful,
    * but WITHOUT ANY WARRANTY; without even the implied warranty of
    * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    * GNU General Public License for more details.
    *
    * You should have received a copy of the GNU General Public License
    * along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topToolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?actionBarSize"
            android:theme="@style/App.MaterialToolbar"
            app:contentInsetStart="0dp"
            app:menu="@menu/main_toolbar">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <FrameLayout
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_centerVertical="true"
                    tools:ignore="UselessParent">


                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/toolBarAvatar"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:background="@drawable/ic_launcher_background"
                        android:clickable="false"
                        android:contentDescription="@string/profile_avatar"
                        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"
                        app:srcCompat="@drawable/ic_launcher_foreground" />
                </FrameLayout>

            </RelativeLayout>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_padding_vertical"
            android:paddingHorizontal="@dimen/activity_padding_horizontal"
            android:paddingBottom="84dp">

            <!-- Current Balance Card-->
            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/mainBalanceCard"
                android:name="dev.n3shemmy3.coffre.ui.screen.main.MainBalanceCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout="@layout/fragment_main_balance_card"
/>

            <!-- Transaction List -->
            <RelativeLayout
                android:id="@+id/transactionsCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/activity_padding_vertical"
                android:orientation="vertical"
                android:background="@drawable/item_background_single"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/transactionHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/transactionAllButton"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/screen_transactions"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/transactionAllButton"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@id/transactionHeader"
                    android:layout_alignParentEnd="true"
                    android:layout_marginHorizontal="12dp"
                    android:minWidth="0dp"
                    android:text="@string/see_all" />

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/transactionsRecycler"
                    android:name="dev.n3shemmy3.coffre.ui.screen.main.MainTransactionsList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/transactionHeader"
                    android:layout_marginVertical="12dp" />
            </RelativeLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/activity_padding_vertical"
        android:contentDescription="@string/record_new_transaction"
        android:src="@drawable/outline_add_24"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>