<?xml version="1.0" encoding="utf-8"?>
<!--
    * Copyright (C) 2025 Shemmy
    *
    * This program is free software: you can redistribute it and/or modify
    * it under the terms of the GNU General Public License as published by
    * the Free Software Foundation, version 3 of the License.
    *
    * This program is distributed in the hope that it will be useful,
    * but WITHOUT ANY WARRANTY; without even the implied warranty of
    * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    * GNU General Public License for more details.
    *
    * You should have received a copy of the GNU General Public License
    * along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topToolBar"
            style="@style/App.MaterialToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?actionBarSize"
            app:navigationIcon="@drawable/outline_arrow_back_24"
            app:title="@string/action_create_category" />
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/activity_padding_horizontal"
            android:paddingTop="@dimen/activity_padding_vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_padding_vertical"
                android:gravity="start"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/iconSelector"
                    android:layout_width="86dp"
                    android:layout_height="86dp"
                    android:background="?colorPrimary"
                    android:contentDescription="@string/list_item_icon"
                    app:contentPadding="16dp"
                    android:layout_marginBottom="8dp"
                    app:tint="?colorOnPrimary"
                    app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"
                    app:srcCompat="@drawable/outline_add_24" />

                <TextView
                    android:id="@+id/itemTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_pick_icon"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textColor="@color/list_item_tint" />


            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_padding_vertical"
                android:hint="@string/name"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLength="30" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_padding_vertical"
            android:orientation="horizontal">
                            <com.google.android.material.card.MaterialCardView
                                android:id="@+id/colorSelector"
                                style="@style/Widget.Material3.CardView.Filled"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:clickable="true"
                                app:cardBackgroundColor="@android:color/transparent"
                                app:shapeAppearanceOverlay="?shapeAppearanceSmallComponent"
                                app:strokeColor="@color/color_stroke"
                                app:strokeWidth="1dp">

                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="64dp">

                                    <com.google.android.material.card.MaterialCardView
                                        android:id="@+id/colorCard"
                                        style="@style/Widget.Material3.CardView.Filled"
                                        android:layout_width="44dp"
                                        android:layout_height="44dp"
                                        android:layout_centerVertical="true"
                                        android:layout_marginStart="16dp"
                                        android:layout_marginEnd="8dp"
                                        app:cardBackgroundColor="?colorPrimary"
                                        app:contentPadding="10dp"
                                        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full" />

                                    <TextView
                                        android:id="@+id/colorName"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_centerVertical="true"
                                        android:layout_toEndOf="@id/colorCard"
                                        android:maxLines="1"
                                        android:text="@string/action_pick_color"
                                        android:textAppearance="?attr/textAppearanceSubtitle1"
                                        android:textColor="@color/list_item_tint"
                                        tools:ignore="RtlSymmetry" />


                                </RelativeLayout>
                            </com.google.android.material.card.MaterialCardView>
                        </LinearLayout>

            -->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/notes"
                app:counterEnabled="true"
                app:counterMaxLength="500">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputNotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:imeOptions="actionDone"
                    android:maxLength="500"
                    android:minHeight="144dp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>